--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
   /* Custom warna */
   --color-primary: #06b6d4; /* Sama seperti cyan-500 */
@@ -33,12 +35,12 @@
     padding-right: var(--container-padding);
   }
   .navbar-fixed {
-    @apply fixed z-[9999] bg-white/70 backdrop-blur-xs; /* Ganti bg-opacity-70 jadi bg-white/70 */ 
+    @apply dark:bg-dark/50 fixed z-[9999] bg-white/70 backdrop-blur-xs; /* Ganti bg-opacity-70 jadi bg-white/70 */
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   }
 
   .hamburger-line {
-    @apply my-2 block h-[2px] w-[30px] bg-black;
+    @apply my-2 block h-[2px] w-[30px] bg-black dark:bg-white;
   }
 
   .hamburger-active > span:nth-child(1) {
@@ -51,5 +53,9 @@
 
   .hamburger-active > span:nth-child(3) {
     @apply -rotate-45;
+  }
+
+  #dark-toggle:checked ~ label div.toggle-circle {
+    @apply translate-x-3;
   }
 }
